--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#jupyter notebook
+
+.ipynb_checkpoints
+.ipynb_checkpoints/.
+.ipynb_checkpoints/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
